[gd_scene load_steps=64 format=3 uid="uid://ceum8wfs6scyg"]

[ext_resource type="PackedScene" uid="uid://bwk6bh0chqfbe" path="res://Enemies/enemy.tscn" id="1_2cqtb"]
[ext_resource type="Texture2D" uid="uid://d1rhpeyvfqrsy" path="res://Arts/enemies/Minotaur/Minotaur - Sprite Sheet.png" id="2_0u385"]
[ext_resource type="Script" path="res://Enemies/Minotaur/Minotaur.gd" id="2_silr0"]
[ext_resource type="Script" path="res://Enemies/Minotaur/MinotaurFSM.gd" id="3_3mr7p"]
[ext_resource type="Script" path="res://Hitbox.gd" id="3_kkh4n"]
[ext_resource type="Texture2D" uid="uid://bf45ljconl0h5" path="res://Arts/Free Smoke Fx Pixel 2/Free Smoke Fx  Pixel 07.png" id="3_ognoc"]
[ext_resource type="AudioStream" uid="uid://d01u7qct01dba" path="res://Music/SE/10_Battle_SFX/77_flesh_02.wav" id="5_fdhbb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_328ac"]
atlas = ExtResource("2_0u385")
region = Rect2(0, 576, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0n8o"]
atlas = ExtResource("2_0u385")
region = Rect2(96, 576, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5uht2"]
atlas = ExtResource("2_0u385")
region = Rect2(192, 576, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5vh04"]
atlas = ExtResource("2_0u385")
region = Rect2(288, 576, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7k3n"]
atlas = ExtResource("2_0u385")
region = Rect2(384, 576, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4iq4d"]
atlas = ExtResource("2_0u385")
region = Rect2(480, 576, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_nouxa"]
atlas = ExtResource("2_0u385")
region = Rect2(576, 576, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_5k5ly"]
atlas = ExtResource("2_0u385")
region = Rect2(672, 576, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kt4r7"]
atlas = ExtResource("2_0u385")
region = Rect2(768, 576, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_il2tk"]
atlas = ExtResource("2_0u385")
region = Rect2(0, 864, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_e6s4e"]
atlas = ExtResource("2_0u385")
region = Rect2(96, 864, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1kcew"]
atlas = ExtResource("2_0u385")
region = Rect2(192, 864, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_14r8a"]
atlas = ExtResource("2_0u385")
region = Rect2(288, 864, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vifnu"]
atlas = ExtResource("2_0u385")
region = Rect2(384, 864, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_v4yop"]
atlas = ExtResource("2_0u385")
region = Rect2(480, 864, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ej2ko"]
atlas = ExtResource("2_0u385")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5f1v"]
atlas = ExtResource("2_0u385")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0jj0d"]
atlas = ExtResource("2_0u385")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_66l84"]
atlas = ExtResource("2_0u385")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_l47bi"]
atlas = ExtResource("2_0u385")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3axe"]
atlas = ExtResource("3_ognoc")
region = Rect2(0, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ufny8"]
atlas = ExtResource("3_ognoc")
region = Rect2(64, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhwhl"]
atlas = ExtResource("3_ognoc")
region = Rect2(128, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5m48"]
atlas = ExtResource("3_ognoc")
region = Rect2(192, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrlmi"]
atlas = ExtResource("3_ognoc")
region = Rect2(256, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_syxk4"]
atlas = ExtResource("3_ognoc")
region = Rect2(320, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1pi7"]
atlas = ExtResource("3_ognoc")
region = Rect2(384, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_rws4j"]
atlas = ExtResource("3_ognoc")
region = Rect2(448, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ru0bj"]
atlas = ExtResource("3_ognoc")
region = Rect2(512, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0tc1"]
atlas = ExtResource("3_ognoc")
region = Rect2(576, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_so3di"]
atlas = ExtResource("3_ognoc")
region = Rect2(640, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ce4ig"]
atlas = ExtResource("3_ognoc")
region = Rect2(704, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ye7tf"]
atlas = ExtResource("3_ognoc")
region = Rect2(768, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6er4p"]
atlas = ExtResource("3_ognoc")
region = Rect2(832, 1024, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfjtw"]
atlas = ExtResource("2_0u385")
region = Rect2(0, 768, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fsjt1"]
atlas = ExtResource("2_0u385")
region = Rect2(96, 768, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_a32v5"]
atlas = ExtResource("2_0u385")
region = Rect2(192, 768, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_e7kee"]
atlas = ExtResource("2_0u385")
region = Rect2(0, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysdbg"]
atlas = ExtResource("2_0u385")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mhxdd"]
atlas = ExtResource("2_0u385")
region = Rect2(192, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2xtt"]
atlas = ExtResource("2_0u385")
region = Rect2(288, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_seykh"]
atlas = ExtResource("2_0u385")
region = Rect2(384, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ajraf"]
atlas = ExtResource("2_0u385")
region = Rect2(480, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_qn7cy"]
atlas = ExtResource("2_0u385")
region = Rect2(576, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_25oqb"]
atlas = ExtResource("2_0u385")
region = Rect2(672, 96, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_oqibe"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_328ac")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0n8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5uht2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5vh04")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7k3n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4iq4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nouxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5k5ly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kt4r7")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_il2tk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e6s4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1kcew")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14r8a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vifnu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v4yop")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ej2ko")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5f1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0jj0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66l84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l47bi")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3axe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ufny8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhwhl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5m48")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrlmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_syxk4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1pi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rws4j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ru0bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0tc1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_so3di")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ce4ig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ye7tf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6er4p")
}],
"loop": true,
"name": &"explosion",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfjtw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fsjt1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a32v5")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e7kee")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysdbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mhxdd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2xtt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_seykh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ajraf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qn7cy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25oqb")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7nogc"]
radius = 16.0
height = 74.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5lbip"]
radius = 14.0
height = 38.0

[sub_resource type="Animation" id="Animation_rfn8d"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Hitbox:damage")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Hitbox:knockback_force")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [300]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Hitbox/CollisionShape2D2:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../AnimatedSprite2D:animation")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../AnimatedSprite2D:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = false
tracks/7/path = NodePath("../AttackSE:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("../AnimatedSprite2D:visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("..:max_hp")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("..:hp")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("..:accerelation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("..:max_speed")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [60]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath(".:disabled")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/14/type = "value"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("../Area2D/CollisionShape2D:disabled")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_gc8o2"]
resource_name = "attack"
length = 1.5
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../Hitbox:damage")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [2, 2, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Hitbox:knockback_force")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.4, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [200, 200, 300]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Hitbox/CollisionShape2D2:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.3, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [false, true, false, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Hitbox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../AnimatedSprite2D:animation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../AnimatedSprite2D:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 2, 1]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../AttackSE:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.4, 0.65),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, true]
}

[sub_resource type="Animation" id="Animation_oat6c"]
resource_name = "dead"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(100, 100, 100, 1), Color(100, 100, 100, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 13]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AnimatedSprite2D:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [&"dead", &"explosion"]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(2),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"queue_free"
}]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Hitbox/CollisionShape2D2:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../Area2D/CollisionShape2D:disabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_micly"]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"hurt"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Hitbox/CollisionShape2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../AnimatedSprite2D:modulate")
tracks/2/interp = 0
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(100, 100, 100, 1), Color(1, 1, 1, 1), Color(100, 100, 100, 1), Color(1, 1, 1, 1), Color(100, 100, 100, 1), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../AnimatedSprite2D:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 2, 1, 0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Hitbox:damage")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../Hitbox:knockback_force")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [300]
}

[sub_resource type="Animation" id="Animation_frrcs"]
resource_name = "idle"
length = 0.7
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"default"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../Hitbox:damage")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../Hitbox:knockback_force")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [300]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../Hitbox/CollisionShape2D2:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_2nr0q"]
resource_name = "move"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"move"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2k37g"]
_data = {
"RESET": SubResource("Animation_rfn8d"),
"attack": SubResource("Animation_gc8o2"),
"dead": SubResource("Animation_oat6c"),
"hurt": SubResource("Animation_micly"),
"idle": SubResource("Animation_frrcs"),
"move": SubResource("Animation_2nr0q")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_k7hf5"]
radius = 18.0
height = 78.0

[node name="Minotaur" instance=ExtResource("1_2cqtb")]
collision_mask = 13
script = ExtResource("2_silr0")
player_in_area = false
max_hp = 6
hp = 6
accerelation = 5

[node name="FiniteStateMachine" parent="." index="0"]
script = ExtResource("3_3mr7p")

[node name="AnimatedSprite2D" parent="." index="1"]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_oqibe")

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2(-3, 0)
rotation = 1.57079

[node name="Hitbox" type="Area2D" parent="." index="3"]
collision_layer = 0
collision_mask = 2
script = ExtResource("3_kkh4n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]
position = Vector2(5, 7)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_7nogc")
disabled = true
debug_color = Color(1, 0.00784314, 0.0392157, 0.419608)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox" index="1"]
position = Vector2(-3, -4)
shape = SubResource("CapsuleShape2D_5lbip")
debug_color = Color(0.643137, 0, 0.0941176, 0.419608)

[node name="AnimationPlayer" parent="." index="4"]
libraries = {
"": SubResource("AnimationLibrary_2k37g")
}
autoplay = "move"

[node name="PathTimer" parent="." index="5"]
wait_time = 0.1

[node name="NavigationAgent2D" parent="." index="6"]
path_desired_distance = 5.0
target_desired_distance = 5.0
path_max_distance = 200.0
path_postprocessing = 1
avoidance_enabled = true
radius = 30.0
max_neighbors = 8
time_horizon_agents = 0.5
max_speed = 150.0

[node name="AttackSE" type="AudioStreamPlayer" parent="." index="7"]
stream = ExtResource("5_fdhbb")
pitch_scale = 0.5

[node name="Area2D" type="Area2D" parent="." index="8"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]
position = Vector2(5, 7)
rotation = -1.57079
shape = SubResource("CapsuleShape2D_k7hf5")
debug_color = Color(0.654902, 0.513726, 0.188235, 0.419608)

[node name="AttackTimer" type="Timer" parent="." index="9"]
wait_time = 6.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
